--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.2",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
